# kefir-models

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
configs/: default_args.json  logistic_pinn_config_reference.json  ode_fit_config_reference.json  sde_compare_config_reference.json
data/raw/: waterKefirTrialsReferece.csv
docs/: 00_main.tex  01_data_and_preprocessing.tex  02_classic_logisitc_ode.tex  03_node.tex  04_nsde.tex  05_det_log_pinn.tex  06_sto_log_pinn.tex  07_comparision_criteria.tex  08_numerics.tex  09_reproducibility.tex  abstract  api.md  changelog.md  index.md  installation.md  kefir_model_comparison_references.bib  kefir_model_comparison_report.tex  models.md  report.md  results.md  setup.tex  usage.md
src/kefir_models/: __init__.py  logistic_pinn_compare.py  ode_fit.py  plot_all_models.py  plot_ode_fit.py  plot_pinn_fit.py  plot_sde_compare.py  plot_style.py  sde_compare.py
tests/: __init__.py  conftest.py  test_logistic_pinn_compare.py  test_ode_fit.py  test_ode_fit_units.py  test_plot_all_models.py  test_plot_style.py  test_sde_compare.py  test_sde_compare_units.py
