[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kefir-models"
version = "0.1.0"
description = "Neural ODE, Neural SDE, and logistic PINN models for water kefir fermentation data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Saul Diaz-Infante Velasco", email = "sauld@cimat.mx" },
]
keywords = [
    "neural-ode",
    "neural-sde",
    "physics-informed-neural-networks",
    "logistic-growth",
    "fermentation",
    "kefir",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "torch>=2.0",
    "torchdiffeq>=0.2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/SaulDiazInfante/kefir-models"
Repository = "https://github.com/SaulDiazInfante/kefir-models"
Issues = "https://github.com/SaulDiazInfante/kefir-models/issues"

[project.scripts]
kefir-ode-fit = "kefir_models.ode_fit:main"
kefir-sde-compare = "kefir_models.sde_compare:main"
kefir-logistic-pinn-compare = "kefir_models.logistic_pinn_compare:main"
kefir-plot-ode-fit = "kefir_models.plot_ode_fit:main"
kefir-plot-pinn-fit = "kefir_models.plot_pinn_fit:main"
kefir-plot-sde-compare = "kefir_models.plot_sde_compare:main"
kefir-plot-all-models = "kefir_models.plot_all_models:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kefir_models = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
branch = true
source = ["kefir_models"]

[tool.coverage.report]
show_missing = true
